# probing_faithfulness

./: .gitignore  README.md  pyproject.toml
src/: hello.py  result_visualization.py
src/data/: create_faithfulness_dataset.py  dataset.py  evaluator.py
src/data/metrics/: base_metric.py  compute_efficient_faithfulness.py  early_answering.py
src/models/: activation_hooks.py  base_model.py  transformers_model.py
src/probing/: faithfulness_detector.py  linear_probe.py
