[project]
name = "probing_faithfulness"
version = "0.1.0"
description = "Tools for detecting LLM faithfulness using linear probing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "click>=8.1.8",
    "datasets>=3.2.0",
    "nltk>=3.9.1",
    "ruff>=0.9.1",
    "safetensors>=0.5.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
]

[dependency-groups]
dev = []


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

